# acustica_de_salas

./: .gitignore  README.md  main.py  membrane_absorber.ipynb  perforated_panel.ipynb  porous_absorber.ipynb  pyproject.toml  utils.py
.ipynb_checkpoints/: macroscopic_models-checkpoint.py  membrane_absorber-checkpoint.ipynb  micro_perforated_panel-checkpoint.ipynb  optimized_absorption-checkpoint.ipynb  porous_absorber-checkpoint.ipynb  utils-checkpoint.py
