[project]
name = "acustica-de-salas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly[express]>=6.0.1",
    "ruff>=0.9.7",
    "scipy>=1.15.2",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
